Final changes made

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
     <title>ToDo Manager</title>
 </head>
 <body>
-    <h1>This is my Todo Application</h1>
+    <center>
+        <h1>This is my Todo Application</h1>
+        <%- include('todos.ejs') %>
+        <%- include('footer.ejs') %>
+    </center>
 </body>
 </html>
