--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todos</title>
-</head>
-<body>
-    <h1>Todos</h1>
-    <% for (let i = 0; i < todos.length; i++){
-        %>
-        <div>
-            <h3><%= todos[i].title %></h3>
-            <p><%= todos[i].description %></p>
-        </div>
-        <%
-    } %>
-</body>
-</html>
+<table border="2" align="center">
+<tr>
+    <td>Title</td>
+    <td>Completed</td>
+    <td>Due Date</td>
+</tr>
+
+<% for (let i = 0; i < todos.length; i++){
+    %>
+        <tr>
+            <td><%= todos[i].title %></td>
+            <td><%= todos[i].dueDate %></td>
+            <td><%= todos[i].completed %></td>
+        </tr>
+    <%
+} %>
+
+</table>
